<resources>
    <string name="app_name">Get Fit Planner</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_bmi_">BMI_Activity</string>
    <string name="page_header">Enter your Physical Information</string>
    <string name="age_label">Age:</string>
    <string name="gender_label">Gender:</string>
    <string name="weight_label">Weight:</string>
    <string name="height_unit">in</string>
    <string name="weight_unit">lbs</string>
    <string name="calculateBMI">CALCULATE BMI</string>
    <string name="clear_button">CLEAR</string>
    <string name="choice1">Male</string>
    <string name="choice2">Female</string>
    <string name="choice3">Other</string>
    <string name="title_activity_menu_">Menu_Activity</string>
    <string name="skip_button">SKIP</string>
    <string name="first_label">First Name:</string>
    <string name="last_label">Last Name:</string>
    <string name="height_label">Height:</string>
    <string name="heading">Hello user please enter your details below</string>
    <string name="heading2">BMI CALCULATOR</string>
    <string name="title_activity_weight_">Weight_Activity</string>
    <string name="date_label">Date:</string>
    <string name="title_activity_water_">Water_Activity</string>
    <string name="weight2_label">Current Weight:</string>
    <string name="new_weight_label">New Weight:</string>
    <string name="waterIntake">Water you drank:</string>
    <string name="waterAdd_label">Add 1 more glass</string>
    <string name="BMI_button">BMI CALCULATOR</string>
    <string name="weight_button">WEIGHT TRACKER</string>
    <string name="water_button">WATER TRACKER</string>
    <string name="calorieIntake_button">CALORIE INTAKE</string>
    <string name="calorieBurn_button">CALORIE BURN</string>
    <string name="balanceCalorie">Calorie Balance For Today:</string>
    <string name="title_activity_calorie_intake_">CalorieIntake_Activity</string>
    <string name="title_activity_calorie_burn_">CalorieBurn_Activity</string>
    <string name="currCalorie">Total Calorie Intake:</string>
    <string name="addCalorie">Add Calories:</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="addButton">ADD</string>
    <string name="currCalorieBurn">Total Calorie Burn:</string>
    <string name="activity">Activity</string>
    <string name="cardio">Cardio</string>
    <string name="strength">Strength</string>
    <string name="yoga">Yoga</string>
    <string name="other">Other</string>
    <string name="greeting">Hello</string>
    <string name="meals">Meals:</string>
    <string name="calorieUnit">kcal</string>
    <string name="date_change_label">Enter below the date you want</string>
    <string name="title_activity_log_details">LogDetailsActivity</string>
    <string name="calorie_balance">Calorie Balance:</string>
    <string name="glassUnit">glass</string>
    <string name="log_details">LOG DETAILS</string>
</resources>