<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/date_change_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_change_label"
        android:textColor="#304FFE"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/changed_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="mm/dd/yyyy"
        android:inputType="date"
        android:textColor="#0F0F0F" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/enter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button" />
    </LinearLayout>

</LinearLayout>