<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CalorieIntake_Activity"
    tools:showIn="@layout/activity_calorie_intake_">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp">

                    <TextView
                        android:id="@+id/date3Display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_label"
                        android:textColor="#304FFE"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/date3Display_value"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:gravity="center_horizontal"
                        android:textColor="#0F0F0F"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:minHeight="50dp">

                    <TextView
                        android:id="@+id/currCalorieBurn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currCalorie"
                        android:textColor="#304FFE"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/currCalorie_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="#0F0F0F"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/calorie_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calorieUnit"
                        android:textColor="#0F0F0F" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp">

                    <TextView
                        android:id="@+id/addCalorieBurn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addCalorie"
                        android:textColor="#304FFE"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/addCalorie_value"
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center_horizontal"
                        android:inputType="number"
                        android:textColor="#0F0F0F" />

                    <TextView
                        android:id="@+id/calorie_unit2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calorieUnit"
                        android:textColor="#0F0F0F" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp">

                    <TextView
                        android:id="@+id/meals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meals"
                        android:textColor="#304FFE"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/breakfast"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/breakfast"
                            android:textColor="#0F0F0F"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/strength"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lunch"
                            android:textColor="#0F0F0F"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/yoga"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dinner"
                            android:textColor="#0F0F0F"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/snacks"
                            android:textColor="#0F0F0F"
                            android:textSize="18sp" />
                    </RadioGroup>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:minHeight="50dp">

                    <Button
                        android:id="@+id/addButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addCalorieIntake"
                        android:text="@string/addButton"
                        android:textSize="18sp" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="300sp">

                </com.github.mikephil.charting.charts.PieChart>

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barchart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>